# LinuxAppDev

02_TerminalProject/: Makefile
03_Multifile/: Makefile  outlib.h
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
06_TracingFencing/: Makefile  fake_unlink.c  move.c  test.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  test.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  buf.h  libgrowbuf.c
09_Testing/tests/: Makefile.am  test_grow_trunc.c  test_init_free.c  test_pop.c  tests.h
10_I18n/: Makefile.am  configure.ac  guesser.c  ru.po
10_I18n/po/: POTFILES.in  ru.po
10_I18n/src/: Makefile.am  guesser.c
10_I18n/src/.deps/: guesser.Po
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Doc.md  Makefile.am  guesser.c
12_PatchInstall/: configure.ac
12_PatchInstall/po/: ru.po
12_PatchInstall/src/: Makefile.am  guesser.c  table.c
